created new files for courses

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
         <item>New Zealand</item>
         <item>India</item>
     </string-array>
+    <string name="title_activity_com401">com401</string>
 
 
 </resources>
